文件上传/编辑样式优化

--- a/public/assets-admin/css/style.css
+++ b/public/assets-admin/css/style.css
@@ -32,7 +32,7 @@ a.btn-danger{
     -webkit-align-items: center;
     -webkit-justify-content: center;
 }
-.gallery-item .fa{
+.gallery-item .file-holder{
     font-size: 100px;
 }
 .gallery-item img{
