admin comment style

--- a/public/assets-admin/css/style.css
+++ b/public/assets-admin/css/style.css
@@ -47,3 +47,8 @@ a.btn-danger{
     line-height: 0;
     color: #000 !important;
 }
+.media-list{
+    border-left: 4px solid #eee;
+    padding: 0px 15px;
+    margin: 10px 0;
+}
