--- a/views/server/comment/list.jade
+++ b/views/server/comment/list.jade
@@ -29,5 +29,5 @@ block content
                             td
                                 a.btn.btn-danger.btn-xs(href='#{adminDir}/comment/#{comment.id}/del') 删除
             if (pageInfo && pageInfo.totalPage > 1)
-                include ../page
+                include ../mixin
                 +pagination(pageInfo)
