--- a/views/server/content/list.jade
+++ b/views/server/content/list.jade
@@ -27,5 +27,5 @@ block content
                                 a.btn.btn-danger.btn-xs(href='#{adminDir}/content/#{content.id}/del') 删除
             
             if (pageInfo && pageInfo.totalPage > 1)
-                include ../page
+                include ../mixin
                 +pagination(pageInfo)
