--- a/views/server/message.jade
+++ b/views/server/message.jade
@@ -4,6 +4,6 @@ block content
     section#error-container
         .block-error
             .alert.alert-danger
-                | #{msg}
+                | #{message}
                 p
                 a.btn.btn-info(href='#{adminDir}') 返回
