--- a/views/server/user/item.jade
+++ b/views/server/user/item.jade
@@ -35,3 +35,14 @@ block content
                             td #{user.salt}
                             td #{user.hashed_password}
 
+    //.row
+        .col-md-12
+            h3 Ta发布的内容
+            table.table.table-striped
+                thead
+                    tr
+                        th 标题
+                        th 日期
+                        th 分类
+                        th 操作
+
