--- a/views/app/content/item.jade
+++ b/views/app/content/item.jade
@@ -66,7 +66,7 @@ block content
             .media-body
                 //h4.media-heading 标题
                 p {{content}}
-                .media-meta(data-id='{{_id}}', data-reply='{{reply}}')
+                .media-meta(data-id='{{id}}', data-reply='{{reply}}')
                     span.text-muted {{created}} 
                     a.J_reply(href='javascript:') 回复
                 ul.media-list.J_list
