--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -12,13 +12,15 @@ html
                 .cms-nav
                     .pull-right.admin-link
                         if (User)
-                            | #{User.name} 
+                            a(href='#{adminDir}')
+                                | #{User.name}
+                            | 
                             a(href='#{adminDir}/user/logout') 注销
                         else
                             a(href='#{adminDir}') 后台管理
                     a.cms-nav-item(class=!Path ? 'active' : '',href='/') 首页
-                    a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
-                    a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
+                    //a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
+                    //a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
         block content
         script(src='/assets/js/vendor/jquery-2.1.1.min.js')
         script(src='/assets/plugins/bootstrap/js/bootstrap.min.js')
