--- a/views/app/mixin.jade
+++ b/views/app/mixin.jade
@@ -46,7 +46,7 @@ mixin commentItem(comment, comments)
             - var avatar = gravatar.url((comment.author &&comment.author.email) || comment.email || '', {s: '40',r: 'x',d: 'retro'}, true)
             img.media-object(src='#{avatar}')
         .media-body
-            //h4.media-heading 标题
+            h4.media-heading #{comment.name}
             p #{comment.content}
             .media-meta(data-id='#{comment._id}', data-reply='#{comment.reply || ""}')
                 span.text-muted #{moment(comment.created).fromNow()} 
