--- a/views/app/content/item.jade
+++ b/views/app/content/item.jade
@@ -30,7 +30,7 @@ block content
                     
                     .comments(data-from='#{content.id}')
                         h3 评论(#{content.comments.length}) 
-                            label.J_toggle_comment(style='font-size: 12px;')
+                            //label.J_toggle_comment(style='font-size: 12px;')
                                 if (comment_list !== '1')
                                     input.J_toggle_comment_input(data-href='?comment_list=1', type='checkbox', checked)
                                     | 嵌套模式
@@ -171,12 +171,12 @@ block foot-js
             }
             $meta.after(Mustache.render(tmpl, {reply: id}));
         });
-        $('.J_toggle_comment').on('mousedown', function(e) {
-            e.preventDefault();
-            var $this = $(this);
-            var $input = $this.find('.J_toggle_comment_input');
-            var checked = $input[0].checked;
-            var url = $input.attr('data-href');
-            location.href = url;
-            console.log($this[0].checked)
-        })
+        //- $('.J_toggle_comment').on('mousedown', function(e) {
+        //-     e.preventDefault();
+        //-     var $this = $(this);
+        //-     var $input = $this.find('.J_toggle_comment_input');
+        //-     var checked = $input[0].checked;
+        //-     var url = $input.attr('data-href');
+        //-     location.href = url;
+        //-     console.log($this[0].checked)
+        //- })
