--- a/views/server/content/list.jade
+++ b/views/server/content/list.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
     .row
         .col-md-12
-            //a.btn.btn-info(href='#{adminDir}/content/add') 添加内容
+            a.btn.btn-info(href='#{adminDir}/content/add') 添加内容
             table.table.table-striped
                 thead
                     tr
