--- a/views/server/user/list.jade
+++ b/views/server/user/list.jade
@@ -18,7 +18,7 @@ block content
                         - each user in users
                             tr
                                 td 
-                                    a(href='#{adminDir}/user/#{user.id}') #{user.username}
+                                    a(href='#{adminDir}/user/#{user.id}', title='#{user.email}') #{user.username}
                                 td #{user.name}
                                 td
                                     if (user.roles)
