--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -203,6 +203,6 @@ html.no-js
         script(src='/assets-admin/js/application.js')
         // Load these page level functions
         block foot-js
-        script.
+        //script.
             var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
             document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
