--- a/views/server/role/add.jade
+++ b/views/server/role/add.jade
@@ -17,6 +17,7 @@ block content
                     //-         input.form-control(name='actions')
                     //-     .col-md-1
                     //-         input.form-control(name='actions')
+                | #{core.getActions(User)}
                 .form-group
                     label 描述
                     textarea.form-control(name='description', rows='8')
