--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -28,6 +28,6 @@ html
         script(src='/assets/js/vendor/mustache.js')
         script(src='/assets/js/vendor/moment-with-langs.js')
         block foot-js
-        script.
+        //script.
             var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
             document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
