--- a/views/server/layout-blank.jade
+++ b/views/server/layout-blank.jade
@@ -31,6 +31,6 @@ html.no-js
         script(src='/assets-admin/plugins/waypoints/waypoints.min.js')
         script(src='/assets-admin/plugins/nanoScroller/jquery.nanoscroller.min.js')
         script(src='/assets-admin/js/application.js')
-        script.
+        //script.
             var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
             document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
