--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,47 @@
 body{
     font-family: '微软雅黑' Monaco;
 }
+.gallery{
+    padding: 10px;
+}
 .gallery img{
     max-width: 200px;
     max-height: 200px;
+    display: block;
+}
+.gallery:after{
+    content: '';
+    clear: both;
+    display: table;
+}
+.gallery-item{
+    width: 200px;
+    height: 200px;
+    background-color: #f0f0f0;
+    border: 1px solid #fff;
+    background-size: cover;
+    float: left;
+    text-align: center;
+    position: relative;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
+}
+.gallery-item .file-holder{
+    font-size: 100px;
+}
+.gallery-item img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.gallery-remove{
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    font-size: 24px;
+    line-height: 0;
+    color: #000 !important;
 }
 .preview img{
     max-width: 200px;
